Finalize project: cleanup, persistence fixes, scheduled movements, stats and GUI